fix(ui): remove dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,12 +104,6 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-}
-
 h2 {
   font-size: 45px;
 }
